removed action from form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="Designing the Future | Brian Langley">
+    <meta property="og:description" content="A passionate 2nd-year software development student specializing in front-end development.
+        Creating visually stunning and user-friendly web applications with HTML, CSS, and JavaScript. Experienced in modern frameworks like React and Vue.js.
+        Emphasizing user-focused experiences and utilizing design tools like Figma. Adaptable, detail-oriented, and constantly learning.">
+    <meta property="og:image" content="./images/og-image.png">
     <title>Designing the Future | Brian Langley</title>
     <meta name="description"
         content="Designing the Future | Brian Langley - A passionate 2nd-year software development student specializing in front-end development.
@@ -250,7 +255,7 @@
                             discussing new projects, creative ideas, or opportunities to be a part apart of.
                         </p>
 
-                        <form name="contact" action="/" method="POST" netlify netlify-honeypot="bot-field"
+                        <form name="contact" method="POST" netlify netlify-honeypot="bot-field"
                             data-netlify-recaptcha="true">
                             <input type="hidden" name="form-name" value="contact" />
 
