Open Graph added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="theme-color" content="#000000">
     <meta property="og:title" content="Designing the Future | Brian Langley">
-    <meta property="og:description" content="A passionate 2nd-year software development student specializing in front-end development.
+    <meta property="og:description"
+        content="A passionate 2nd-year software development student specializing in front-end development.
         Creating visually stunning and user-friendly web applications with HTML, CSS, and JavaScript. Experienced in modern frameworks like React and Vue.js.
         Emphasizing user-focused experiences and utilizing design tools like Figma. Adaptable, detail-oriented, and constantly learning.">
-    <meta property="og:image" content="./images/og-image.png">
+    <meta property="og:image"
+        content="https://img.freepik.com/free-vector/cute-astronaut-operating-laptop-cartoon-vector-icon-illustration-science-technology-icon_138676-1974.jpg?w=1380&t=st=1687859542~exp=1687860142~hmac=17fd35a2721edba4adada7a6d5ff140baf69b133518b00e11f819b2b18a4fd21">
     <title>Designing the Future | Brian Langley</title>
     <meta name="description"
         content="Designing the Future | Brian Langley - A passionate 2nd-year software development student specializing in front-end development.
