--- a/index.html
+++ b/index.html
@@ -258,9 +258,10 @@
                         </p>
 
                         <form name="contact" method="POST" netlify netlify-honeypot="bot-field"
-                            data-netlify-recaptcha="true">
+                            data-netlify-recaptcha="true" action="">
 
                             <input type="hidden" name="form-name" value="contact" />
+                            <input type="hidden" name="form-name" value="contactForm" />
 
                             <div class="row g-2">
                                 <div class="col-sm-6">
