--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         </p>
 
                         <form name="contact" method="POST" netlify netlify-honeypot="bot-field"
-                            data-netlify-recaptcha="true" action="">
+                            data-netlify-recaptcha="true" action="./confirmation.html">
 
                             <input type="hidden" name="form-name" value="contact" />
                             <input type="hidden" name="form-name" value="contactForm" />
