--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
     <script src="./js/loader.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/form.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
