--- a/confirmation.html
+++ b/confirmation.html
@@ -34,11 +34,13 @@
         <div class="px-4 my-5 text-center">
             <h1 class="display-2 text-black subFont">Thank you for reaching out!</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead subFont text-black subFont pb-3">
-                    Your message has been successfully received. I appreciate your interest
-                    and will get back to you as soon as possible. In the meantime, feel free to explore more of my
-                    portfolio and stay updated on my latest work. Thank you again for connecting, and I look forward to
-                    connecting with you soon
+                <p class="lead subFont text-black subFont pt-1">
+                    Your message has been successfully received!
+                </p>
+                <p class="lead subFont text-black subFont">
+                    I appreciate your interest and will get back to you as soon as possible. <br> In the meantime, feel
+                    free
+                    to contact me on Linkedin to stay updated on my latest work.
                 </p>
                 <button type="button" class="btn btn-info text-white btn-lg px-4 me-sm-3 subFont"
                     onclick="window.location.href='index.html'">Click to return to
