--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@
                             discussing new projects, creative ideas, or opportunities to be a part apart of.
                         </p>
 
-                        <form name="contact" method="POST" netlify netlify-honeypot="bot-field"
-                            data-netlify-recaptcha="true" action="confirmation.html">
+                        <form name="contact" method="POST" netlify action="confirmation.html">
 
                             <input type="hidden" name="form-name" value="contact" />
 
