--- a/index.html
+++ b/index.html
@@ -228,6 +228,27 @@
                 </div>
             </article>
 
+            <article class="row pt-5 mb-5" id="project4">
+                <div class="col-md-7 order-md-2 d-flex align-items-center">
+                    <div>
+                        <h2 class="headers cyber-glitch-0">Move To Impact <span class="text-muted">Redesigned</span>
+                        </h2>
+                        <p class="lead subFont">
+                            A Bit Academy school project that involved the redesign of the Move to Impact website, aimed
+                            at enhancing the user experience and visual appeal of the platform. The goal was to create
+                            an engaging and intuitive front-end interface that effectively showcases the company's
+                            services and offerings.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-5 order-md-1 cyber-tile-big project hoverable">
+                    <a href="https://github.com/brianlangley/move-to-impact" target="_blank">
+                        <img class="img-fluid mx-auto cyber-glitch-1" src="./images/projects/mti.gif"
+                            alt="Green screen Falling etherium coin Stock Videos by Vecteezy" loading="lazy">
+                    </a>
+                </div>
+            </article>
+
             <div id="githubLink" class="row justify-content-center mt-5">
                 <div class="col-md-6 text-center cyber-glitch-0">
                     <a href="https://github.com/brianlangley" target="_blank">
