new project added

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="col-md-5 order-md-1 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/move-to-impact" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-1" src="./images/projects/mti.gif"
-                            alt="Green screen Falling etherium coin Stock Videos by Vecteezy" loading="lazy">
+                            alt="Move To Impact Project" loading="lazy">
                     </a>
                 </div>
             </article>
@@ -254,7 +254,7 @@
                     <a href="https://github.com/brianlangley" target="_blank">
                         <button class="cyber-button-big btn-warning text-dark m-4 subFont">
                             Discover more
-                            <span class="glitchtext">Github_Profile</span>
+                            <span class="glitchtext">Github Profile</span>
                         </button>
                     </a>
                 </div>
